support for latin and oddball unicode characters

--- a/disk/f2f/f2fshowcase.html
+++ b/disk/f2f/f2fshowcase.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta charset="ISO-8859-1">
     <title>Face to Face Algorithm Showcase</title>
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <!-- <script src='d3.min.js'></script>-->       <!--Offline support-->
