--- a/disk/f2f/f2fshowcase.html
+++ b/disk/f2f/f2fshowcase.html
@@ -63,15 +63,10 @@
         <a id="AlgB"><div id="B" class='desc'></a>
             <br />
             This algorithm takes two arguments, B(X, Φ); X being the arc length travelled before taking <span class='tooltip'>a detour<span class='tooltiptext'>The robot will go away from the perimeter at an angle Φ, and travel toward and stop at the vertical axis of origin. If it has not been intercepted or notified about the exit at the point, it will return to the perimeter.</span></span>, and Φ being the angle to take the detour at.
-            <ol><b><em><u>Steps:</u></em></b>
+            This algorithms shares the same first three steps as algorithm A.
+            <ol><b><em><u>Steps (Algorithm B):</u></em></b>
                 <li>
-                    The robots go to the perimeter at the same angle.
-                </li>
-                <li>
-                    They travel opposite directions once they reach the perimeter. e.g, If Robot 1 goes clockwise, Robot 2 goes counter-clockwise.
-                </li>
-                <li>
-                    The robots move along the perimeter until one of them finds the exit, in which case they will <span class='tooltip'>intercept the other's path. <span class='tooltiptext'>The robot which finds the exit will calculate a path (chord) across the circle s.t. the distance of its chord is equal to the arc that the other would have travelled along the perimeter in the time it takes to cross the chord. </span></span>
+                    The robots follow the same trajectory as they would in <b>Algorithm A</b>, for a certain amount of time X.
                 </li>
                 <li>
                     If the robots have travelled the distance X without being notified of the exit, they initiate the detour phase at angle Φ.
@@ -88,15 +83,10 @@
         <div id="C" class='desc'>
             <br />
             This algorithm takes two arguments, C(X, Φ, λ); X being the arc length travelled before taking <span class='tooltip'>a triangular detour<span class='tooltiptext'>The robot will go away from the perimeter at an angle Φ for time λ, and then travel DIRECTLY toward and stop at the vertical axis of origin. If it has not been intercepted or notified about the exit at the point, it will return to the perimeter using the shortest path back to the point it came from.</span></span>, Φ being the angle to take the detour at, and λ being the time for at which the robot starts to travel directly to the central axis from its detour.
-            <ol><b><em><u>Steps:</u></em></b>
+            This algorithm shares the same first three steps as Algorithm A.
+            <ol><b><em><u>Steps (Algorithm C):</u></em></b>
                 <li>
-                    The robots go to the perimeter at the same angle.
-                </li>
-                <li>
-                    They travel opposite directions once they reach the perimeter. e.g, If Robot 1 goes clockwise, Robot 2 goes counter-clockwise.
-                </li>
-                <li>
-                    The robots move along the perimeter until one of them finds the exit, in which case they will <span class='tooltip'>intercept the other's path. <span class='tooltiptext'>The robot which finds the exit will calculate a path (chord) across the circle s.t. the distance of its chord is equal to the arc that the other would have travelled along the perimeter in the time it takes to cross the chord. </span></span>
+                    The robots follow the same trjectory as they would in <b>Algorithm A</b>, for a certain amount of time X.
                 </li>
                 <li>
                     If the robots have travelled the distance X without being notified of the exit, they initiate the <span class='tooltip'>triangular detour phase<span class='tooltiptext'>The robot will go away from the perimeter at an angle Φ for time λ, and then travel DIRECTLY toward and stop at the vertical axis of origin. If it has not been intercepted or notified about the exit at the point, it will return to the perimeter using the shortest path back to the point it came from.</span></span> at angle Φ, for time λ.
