--- a/disk/f2f/f2fshowcase.html
+++ b/disk/f2f/f2fshowcase.html
@@ -14,7 +14,7 @@
 
 <body>
     <h1>Robots Evacuating an Area using Face-to-Face Communication</h1>
-    <script src='f2fshowcase.js'></script>
+    <script src='/js/f2fshowcase.js'></script>
 
     <!--<p>
         This problem is being analyzed to determine the optimal time of mobile agents finding an exit.
