--- a/ICLReader/ICLReader.html
+++ b/ICLReader/ICLReader.html
@@ -10,7 +10,7 @@
  <body>
    <script>
    </script>
-   <script src = "/js/ICLAnim.js"></script>
+   <script src = "../js/ICLAnim.js"></script>
    <script>
      //alert(unit2Px);
    </script>
