--- a/ICLReader/ICLReader.html
+++ b/ICLReader/ICLReader.html
@@ -8,11 +8,7 @@
    <!--<script src = "d3.min.js"></script>-->
  </head>
  <body>
-   <script>
-   </script>
    <script src = "../js/ICLAnim.js"></script>
-   <script>
-     //alert(unit2Px);
-   </script>
+   <script>Start();</script>
  </body>
 </html>
