--- a/ICLReader/ICLReader.html
+++ b/ICLReader/ICLReader.html
@@ -1,14 +1,57 @@
-<!doctype html>
+ <!doctype html>
 
 <html>
- <head>
-   <meta charset = "utf-8">
-   <script src = "https://d3js.org/d3.v5.min.js"></script>
-   <link rel='stylesheet' type='text/css' href='ICLfashion.css' />
-   <!--<script src = "d3.min.js"></script>-->
- </head>
- <body>
-   <script src = "../js/ICLAnim.js"></script>
-   <script>Start();</script>
- </body>
+  <head>
+    <meta charset = "utf-8">
+    <!--<script src = "https://d3js.org/d3.v5.min.js"></script>-->
+    <link rel='stylesheet' type='text/css' href='ICLfashion.css'/>
+    <script src = "d3.min.js"></script>
+  </head>
+  <body>
+    <script>
+
+    </script>
+      <svg id="anim">
+        <svg border:"1px solid black" height=100px id="backGround" width=100px viewBox="0 0 100 100">
+          <text x=50 y=5 style="font-size:5;text-anchor:middle">Search and Exit</text>
+          <text id="Desc" x=50 y=8 style="font-size:3;text-anchor:middle">Triangle Wireless</text>
+          <text id="exitText" x=50 y=13 style="font-size:5;text-anchor:middle">Left-Click to place exit at ~0 degrees</text>
+        </svg>
+        <svg border:"1px solid black" height=100px id="lines" width=100px viewBox="0 0 100 100"></svg>
+        <svg border:"1px solid black" height=100px id="bots" width=100px viewBox="0 0 100 100"></svg>
+        <svg border:"1px solid black" height=100px id="overLay" width=100px viewBox="0 0 100 100">
+          <line x1=50 y1=25 x2=50 y2=75 style="stroke:#000000;stroke-width:.25"></line>
+          <line x1=25 y1=50 x2=75 y2=50 style="stroke:#000000;stroke-width:.25"></line>
+          <circle id="center" cx=50 cy=50 r=.5 style="fill:#ffffff;stroke:#000000;stroke-width:.1"></circle>
+        </svg>
+        <svg border:"1px solid black" height=100px id="excess" width=100px viewBox="0 0 100 100">
+          <rect height=100 width=100 style="fill:#ffffff"></rect>
+          <text id="shapeText" x=50 y=40 style="font-size:10;text-anchor:middle">Triangle</text>
+          <path d="M80,36L75,31L75,41L80,36" onclick="IncRight()"></path>
+          <path d="M20,36L25,31L25,41L20,36" onclick="IncLeft()"></path>
+          <text x=50 y=60 onMouseOver="ShapeChosen()" style="text-anchor:middle;font-size:5">Hover over this when done</text>
+        </svg>
+      </svg>
+      <svg id="graph">
+        <svg border:"1px solid black" height=100px id="backGround" width=100px viewBox="0 0 100 100">
+          <text id="timeText" x=1 y=11 style="font-size:8">Time: 0</text>
+          <text id="frameText" x=1 y=18 style="font-size:8">Frame: 0</text>
+          <rect height=4 width=100 style="fill:none;stroke:#000000;stroke-width:.25"></rect>
+          <rect id="timeSlide" height=4 width=4 style="fill:#888888"></rect>
+          <path d="M10,50L10,90L90,90" style="fill:none;stroke:#000000;stroke-width:.25"></path>
+          <text x=15 y=70 transform="rotate(-90,10,75)" style="fill:#000000;font-size:5;text-anchor:middle">Dist. from Exit(radius)</text>
+          <text x=50 y=98 style="fill:#000000;font-size:5;text-anchor:middle">Time(seconds)</text>
+        </svg>
+        <svg border:"1px solid black" height=100px id="lines" width=100px viewBox="0 0 100 100"></svg>
+        <svg border:"1px solid black" height=100px id="bots" width=100px viewBox="0 0 100 100"></svg>
+        <svg border:"1px solid black" height=100px id="overLay" width=100px viewBox="0 0 100 100"></svg>
+        <svg border:"1px solid black" height=100px id="excess" width=100px viewBox="0 0 100 100">
+          <rect height=100% width=100% style="fill:#ffffff"></rect>
+        </svg>
+      </svg>
+    <script src = "ICLAnim.js"></script>
+    <script>
+      Start();
+    </script>
+  </body>
 </html>
