--- a/ICLReader/ICLReader.html
+++ b/ICLReader/ICLReader.html
@@ -3,9 +3,9 @@
 <html>
   <head>
     <meta charset = "utf-8">
-    <!--<script src = "https://d3js.org/d3.v5.min.js"></script>-->
-    <link rel='stylesheet' type='text/css' href='ICLfashion.css'/>
-    <script src = "d3.min.js"></script>
+    <script src = "https://d3js.org/d3.v5.min.js"></script>
+    <link rel='stylesheet' type='text/css' href='ICLFashion.css'/>
+    <!--<script src = "d3.min.js"></script>-->
   </head>
   <body>
     <script>
@@ -49,7 +49,7 @@
           <rect height=100% width=100% style="fill:#ffffff"></rect>
         </svg>
       </svg>
-    <script src = "ICLAnim.js"></script>
+    <script src = "../js/ICLAnim.js"></script>
     <script>
       Start();
     </script>
