update 10/05/18, change typos, make showcase work again.

--- a/disk/circleShowcase.html
+++ b/disk/circleShowcase.html
@@ -37,7 +37,7 @@
     </div>
 
     <h1>Robots Evacuating a Disk</h1>
-    <script type='module' src='circleShowcase.js'></script>
+    <script src='circleShowcase.js'></script>
 
 
     <!--<p>
