--- a/GraphComparison/GraphComparison.html
+++ b/GraphComparison/GraphComparison.html
@@ -19,6 +19,8 @@
               <option value="C">Algorithm C</option>
               <option value="P1">Priority 1</option>
               <option value="P2">Priority 2</option>
+              <option value="2Q1S">2 Priority + 1 Servant (1)</option>
+              <option value="1Q1S1Q">2 Priority + 1 Servant (2)</option>
 
           </select>
           <input id="exitAngle" type="number" value="0" min=0 max=360 />
@@ -31,6 +33,8 @@
               <option value="C">Algorithm C</option>
               <option value="P1">Priority 1</option>
               <option value="P2">Priority 2</option>
+              <option value="2Q1S">2 Priority + 1 Servant (1)</option>
+              <option value="1Q1S1Q">2 Priority + 1 Servant (2)</option>
           </select>
           <button type="submit" action="javascript:void(0)" onClick="changeInstructions(1)">Submit.</button>
       </div>
